<resources>
    <string name="app_name">BallKan</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navi_league">League</string>
    <string name="navi_super_league">Super</string>
    <string name="navi_custom_league">Custom</string>
    <string name="navi_tipstar">Champion\nShip</string>
    <string name="navi_profile">Profile</string>
    <string name="navi_bet_history">Bet History</string>
    <string name="navi_user_ranking">Ranking</string>
    <string name="navi_matchList">Match List</string>

    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_logo">Tip Star</string>
    <string name="label_create_account">CREATE YOUR NEW ACCOUNT</string>
    <string name="label_fb_continue">Continue with Facebook</string>
    <string name="label_title">Tipstar Championship</string>

    <string name="hint_ph_no">Phone Number</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_pwd_confirm">Confirmed Password</string>

    <string name="title_match_list">Match List</string>
    <string name="title_profile">Profile</string>
    <string name="title_bet_history">History</string>
    <string name="title_ranking">Ranking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">1338693459646615</string>
    <string name="fb_login_protocol_scheme">fb1338693459646615</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
