<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <include
                layout="@layout/content_banner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.8"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/view_width"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ph"
                        style="@style/CvEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_ph_no"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/view_width"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd"
                        style="@style/CvEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pwd"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/MyBtnStyle"
                    android:layout_width="@dimen/view_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xl"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:onClick="onLogin"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_lg"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_create_account"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:onClick="onRegister"/>


            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>
