<?xml version="1.0" encoding="utf-8"?>

<layout>
<FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.RegisterActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <include
                    layout="@layout/content_banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                <ImageView
                    android:layout_width="360dp"
                    android:layout_height="450dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="-80dp"
                    android:layout_marginBottom="-60dp"
                    android:src="@drawable/img_bglogin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_lg">
                    <EditText
                        android:id="@+id/ph"
                        android:layout_width="240dp"
                        android:layout_height="48dp"
                        android:hint="@string/hint_ph_no"
                        android:background="@drawable/bg_login_btn_rounded"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:paddingLeft="15dp"
                        android:textColor="@color/grey_dark"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/pwd"
                        android:layout_width="240dp"
                        android:layout_height="48dp"
                        android:hint="@string/hint_pwd"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_login_btn_rounded"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:textColor="@color/grey_dark"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/confirmPwd"
                        android:layout_width="240dp"
                        android:layout_height="48dp"
                        android:hint="@string/hint_pwd_confirm"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_login_btn_rounded"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:textColor="@color/grey_dark"
                        android:textSize="14sp" />


                    <com.google.android.material.button.MaterialButton
                        style="@style/MyBtnStyle"
                        android:layout_width="@dimen/view_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xl"
                        android:fontFamily="sans-serif"
                        android:onClick="onRegister"
                        android:text="@string/label_register"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:cornerRadius="24dp"/>
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/loginButton"
                        android:layout_width="@dimen/view_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"
                        android:onClick="facebookRegister" />

                </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                />

        </FrameLayout>
</layout>